# boonray

./: README.md
HesaiLidar_General_ROS/: CMakeLists.txt
Huace/: CMakeLists.txt  调试笔记.md
Huace/include/Huace/: ECanVci.h
Huace/src/: huace_node.cpp
devel/: .catkin  local_setup.sh  setup.sh
devel/include/Huace/: pos_xy.h
devel/include/gnss_pos/: pos_xy.h
devel/include/lidar_localization/: optimizeMap.h  optimizeMapRequest.h  optimizeMapResponse.h  saveMap.h  saveMapRequest.h  saveMapResponse.h
devel/lib/lidar_localization/: AEB_node  RRT_test_node  gnss_map_pub_node  grid_map_node  path_tracking_node  save_map_csv_node
devel/lib/pkgconfig/: Huace.pc  car_control.pc  gnss_pos.pc  lidar_localization.pc  test_path.pc
devel/lib/test_path/: path
devel/share/Huace/cmake/: Huace-msg-paths.cmake  HuaceConfig.cmake
devel/share/car_control/cmake/: car_controlConfig.cmake
devel/share/gnss_pos/cmake/: gnss_pos-msg-paths.cmake  gnss_posConfig.cmake
devel/share/lidar_localization/cmake/: lidar_localization-msg-extras.cmake  lidar_localizationConfig.cmake
devel/share/roseus/ros/Huace/: manifest.l
devel/share/test_path/cmake/: test_pathConfig.cmake
lidar_localization/: CMakeLists.txt  调试文档.md
lidar_localization/include/lidar_localization/GNSS_trajectory/: GNSS_trajectory.hpp
lidar_localization/include/lidar_localization/data_pretreat/: data_pretreat_flow.hpp
lidar_localization/include/lidar_localization/global_defination/: global_defination.h.in
lidar_localization/include/lidar_localization/grid_map/: grid_map.hpp
lidar_localization/include/lidar_localization/obstacle_operation/: AEB.hpp
lidar_localization/include/lidar_localization/path_planning/: RRT.hpp
lidar_localization/include/lidar_localization/path_tracking/: purePursuit.hpp
lidar_localization/include/lidar_localization/publisher/: cloud_publisher.hpp  grid_map_publisher.hpp  obstacle_warn_publisher.hpp  path_publisher.hpp  trivial_msg_publisher.hpp
lidar_localization/include/lidar_localization/subscriber/: gnss_subscriber.hpp  grid_map_subscriber.hpp
lidar_localization/latlon_data/: map.csv
lidar_localization/launch/: default.rviz
lidar_localization/src/GNSS_trajectory/: GNSS_trajectory.cpp  map.csv
lidar_localization/src/apps/: AEB_node.cpp  Just_RRT_test_node.cpp  RRT_test_node.cpp  gnss_map_pub_node.cpp  grid_map_node.cpp  path_tracking_node.cpp  save_map_csv_node.cpp
lidar_localization/src/grid_map/: grid_map.cpp
lidar_localization/src/obstacle_operation/: AEB.cpp
lidar_localization/src/path_planning/: RRT.cpp  RRT调试经过.docx
lidar_localization/src/path_tracking/: purePursuit.cpp
lidar_localization/src/publisher/: cloud_publisher.cpp  grid_map_publisher.cpp  obstacle_warn_publisher.cpp
lidar_localization/src/subscriber/: gnss_subscriber.cpp  grid_map_subscriber.cpp
message/gnss_pos/: package.xml
message/gnss_pos/msg/: pos_xy.msg
src/lidar_localization/: CMakeLists.txt
src/lidar_localization/latlon_data/: map.csv
src/lidar_localization/src/GNSS_trajectory/: KdTree.cpp
src/lidar_localization/src/apps/: AEB_node.cpp  RRT_test_node.cpp  gnss_map_pub_node.cpp  grid_map_node.cpp  path_tracking_node.cpp  save_map_csv_node.cpp  test_frame_node.cpp
src/message/gnss_pos/: CMakeLists.txt
src/test_path/: CMakeLists.txt  package.xml
src/test_path/src/: path.cpp
(+39 files in other folders)
